--- a/UTS_rira/asset/login.css
+++ b/UTS_rira/asset/login.css
@@ -1,65 +1,64 @@
 /* General Reset */
 body {
     margin: 0;
-    font-family: 'Poppins', sans-serif;
     background-color: #f8f9fa;
     color: #333;
 }
 
-/* Hero Section */
+/* Hero Content Login */
 .hero {
+    background-image: url(image/bg_login.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
     height: 100vh;
+    color: brown;
+    padding-left: 150px;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-    color: white;
     position: relative;
-}
-
-.hero::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.6);
-    z-index: 1;
-}
-
-.hero-content {
-    position: relative;
-    z-index: 2;
 }
 
 .hero-content h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
     margin-bottom: 10px;
 }
 
 .hero-content p {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     margin-bottom: 20px;
 }
 
 .hero-content .buttons button {
-    padding: 12px 20px;
     margin: 5px;
-    border: none;
+    border: solid;
     border-radius: 8px;
     font-size: 1rem;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: 0.3s ease;
+    flex-direction: column; 
 }
 
-.hero-content .buttons .open-button {
-    background-color: #ff6347;
+.hero-content .buttons .button-login {
+    background-color: #ff674c;
     color: white;
+    padding: 10px 135px;
 }
 
-.hero-content .buttons .open-button:hover {
+.hero-content .buttons .button-register {
+    background-color: #fcfcfc;
+    color: #ff6347;
+    border-color: #ff6347;
+    padding: 10px 120px;
+}
+
+.hero .hero-content .buttons .button-login:hover {
     background-color: #ff4500;
+}
+
+.hero .hero-content .buttons .button-register:hover {
+    background-color: #ff4500;
+    color: white;
 }
 
 /* Pop-up Form */
@@ -140,25 +139,17 @@ body {
     background-color: white;
     text-align: center;
     padding: 20px;
-    box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
-    margin-top: 50px;
 }
 
-.footer img {
-    vertical-align: middle;
-    margin-right: 10px;
-}
-
-.footer .foot {
+.foot {
     display: inline-block;
-    font-size: 1rem;
-    margin: 5px 0;
-}
-
+    line-height: 20px;
+    vertical-align: top;
+    margin: 5px;
+  }
 .footer p {
     font-size: 0.9rem;
     margin: 10px 0;
-    color: #555;
 }
 
 /* Animations */
