--- a/UTS_rira/asset/style.css
+++ b/UTS_rira/asset/style.css
@@ -21,7 +21,7 @@ body {
   margin: 0;
 }
 
-/* Navbar */
+/* Style Navbar */
 .navbar {
   background-color: #fff428;
 }
@@ -55,8 +55,6 @@ body {
   color: white;
 }
 
-
-
 /* Home page */
 .home {
   background-image: url(image/wallpaper.jpg);
@@ -72,115 +70,91 @@ body {
   font-size: x-large;
 }
 
-/* List menu */
-.flex-container {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  padding: 200px;
-}
-
-/* Background */
-.listmakanan,
-.listminuman {
-  background-image: url(image/listmenu.jpg);
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-}
-
 /* Profile Section */
+.profile {
+  background-image: url(image/bg_profile.jpg);
+  background-repeat: repeat;
+  background-size: 20% 20%;
+}
+
 .profile-container {
   display: flex;
-  align-items: flex-start;
   gap: 30px;
-  padding: 40px;
+  padding: 30px;
   background: rgba(0, 0, 0, 0.7); /* Semi-transparan */
   border-radius: 15px;
-  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
   max-width: 1200px;
   margin: 50px auto;
   color: #fff;
-  transition: transform 0.4s ease, box-shadow 0.4s ease;
 }
 
 .profile-container:hover {
   transform: scale(1.02);
-  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
 }
 
 /* Profile Photo */
 .profile-photo {
   flex: 1;
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
 }
 
 .profile-photo img {
-  width: 250px;
-  height: 250px;
+  width: 230px;
+  height: 270px;
   border-radius: 15px;
   object-fit: cover;
   border: 5px solid #fff;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .profile-photo img:hover {
   transform: scale(1.1);
-  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
 }
 
 /* Profile Content */
 .profile-content {
-  flex: 2;
+  flex: 3;
   display: flex;
   flex-direction: column;
   gap: 20px;
+  width: 100%;
 }
 
 /* Biografi, CV, and Education Section */
 .bio, .cv, .education {
   background: rgba(255, 255, 255, 0.1); /* Semi-transparan */
   padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-  transition: background 0.3s ease, box-shadow 0.3s ease;
+  border-radius: 10px;  
+  margin-bottom: 15px;
+  color: #fefefe;
 }
 
 .bio:hover, .cv:hover, .education:hover {
   background: rgba(255, 255, 255, 0.2); /* Lebih cerah saat hover */
-  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
 }
 
 .bio h2, .cv h2, .education h2 {
   font-size: 2rem;
   text-transform: uppercase;
-  color: #fff;
-  margin-bottom: 10px;
   border-bottom: 2px solid #fb8107;
   display: inline-block;
   padding-bottom: 5px;
 }
 
-.bio p, .cv p, .education ul li {
+.bio p, .cv ul li, .education ul li {
   font-size: 1.2rem;
   line-height: 1.8;
-  color: #fefefe;
 }
 
 .education ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  font-size: 1.1rem;
 }
 
 .education ul li {
-  font-size: 1.1rem;
   padding-left: 25px;
   position: relative;
-  margin-bottom: 15px;
-  color: #fefefe;
 }
 
 .education ul li::before {
@@ -202,129 +176,22 @@ body {
     flex-direction: column;
     gap: 30px;
   }
-
-  .profile-photo img {
-    width: 300px; 
-    height: 300px; 
-    border-radius: 15px;
-    object-fit: cover;
-    border: 5px solid #fff;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-  }
-  
-
-  .profile-content {
-    width: 100%;
-  }
 }
 
-
-
-
-.appetizer,
-.maincourse,
-.dessert {
-  background-image: url(image/eat.jpg);
+/* Background makanan dan minuman halaman utama */
+.listmakanan,
+.listminuman {
+  background-image: url(image/listmenu.jpg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
 
-/* Grid container */
-.grid-container {
+/* List menu halaman utama */
+.listmakanan .flex-container {
   display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
-}
-
-/* Card styling */
-.card {
-  width: 150px;
+  flex-direction: column;
   text-align: center;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
-  overflow: hidden;
-  background-color: #9ABF80;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.card:hover {
-  transform: translateY(-10px) rotate(2deg);
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-.card img {
-  width: 100%;
-  height: 100px;
-  object-fit: cover;
-}
-
-.card p {
-  margin: 10px 0;
-  font-weight: bold;
-  color: #000; /* Warna font hitam */
-}
-
-/* Pop-up modal */
-.popup-modal {
-  display: none;
-  position: fixed;
-  z-index: 1000;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
-  justify-content: center;
-  align-items: center;
-}
-
-.popup-modal:target {
-  display: flex;
-}
-
-.popup-content {
-  background: rgba(154, 191, 128, 0.9); /* Warna hijau transparan */
-  padding: 20px;
-  border-radius: 10px;
-  text-align: center;
-  width: 80%;
-  max-width: 400px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-}
-
-.close-button {
-  float: right;
-  font-size: 20px;
-  text-decoration: none;
-  color: #ff4500;
-}
-
-/* Footer */
-.footer {
-  background-color: #ffffff;
-  padding: 20px;
-  text-align: center;
-  font: 25px;
-  font-size: 15px;
-  box-shadow: 0px 0px 25px rgb(207, 207, 207);
-  width: 100%;
-}
-
-.foot {
-  display: inline-block;
-  line-height: 20px;
-  vertical-align: top;
-  margin: 5px;
-}
-
-/* Responsive layout */
-@media screen and (max-width: 600px) {
-  .column.side,
-  .column.middle {
-      width: 100%;
-  }
+  padding: 200px;
 }
 
 /* Additional button styling */
@@ -354,43 +221,67 @@ body {
   font-family: 'sans-serif';
 }
 
-/* Appetizer animation */
-.appetizer {
-  padding: 40px;
-  text-align: center;
-  animation: slideIn 2s ease;
-}
-
-/* Dessert animation */
+/* appetizer, main course, dessert */
+.appetizer,
+.maincourse,
 .dessert {
-  padding: 40px;
-  text-align: center;
-  animation: slideIn 2s ease;
+  background-image: url(image/eat.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
-
-/* main_course */
-.main-course{
-  padding: 40px;
-  text-align: center;
-  animation: slideIn 2s ease;
-}
-
 
 .content h2 {
   font-size: 2.5rem;
-  margin-bottom: 10px;
-  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  margin: 10px;
+  margin-top: 0;
+  color: rgb(30, 0, 255);
+  text-shadow: 2px 2px 5px white;
 }
 
-.content p {
-  font-size: 1.2rem;
-  margin-top: 10px;
-  color: #ddd;
+.content h3 {
+  font-size: 1.8rem;
+  margin: 10px;
+  color: rgb(30, 0, 255);
+  text-shadow: 2px 2px 5px white;
+}
+/* Grid container */
+.grid-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
+  justify-content: center;
+  padding: 50px;
+}
+
+/* Card styling */
+.card {
+  width: 180px;
+  height: 250px;
+  text-align: center;  
+  border-radius: 10px;
+  overflow: hidden;
+  background-color: #9ABF80;
+  box-shadow: -2px -2px 8px 8px rgba(0, 0, 0, 0.1);
+  transition: 0.3s ease;
+}
+
+.card:hover {
+  transform: translateY(-10px) rotate(2deg);
+  box-shadow: 0 0 4px 8px #b2dc94;
+}
+
+.card img {
+  width: 80%;
+  height: 150px;
+  margin-top: 8px;
+  border: rgba(255, 255, 255, 0.1) solid;
+  border-radius: 8px;
+  object-fit: cover;
 }
 
 .resep-button {
-  margin-top: 20px;
-  padding: 10px 20px;
+  margin: 15px;
+  padding: 10px;
   background-color: #ff6347;
   color: white;
   border: none;
@@ -403,4 +294,77 @@ body {
 
 .resep-button:hover {
   background-color: #ff4500;
+}
+
+/* Pop-up resep */
+.popup-modal {
+  display: none;
+  position: fixed;
+  justify-content: center;
+  align-items: center;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);  
+}
+
+.popup-modal:target {
+  display: flex;
+  overflow: auto;
+}
+
+.popup-content {
+  background: rgba(154, 191, 128, 0.9); /* Warna hijau transparan */
+  padding: 10px;
+  border-radius: 10px;
+  text-align: left;
+  height: auto;
+  max-width: 50%;
+  box-shadow: -2px -0px 8px 8px rgb(0, 0, 0, 0.3);
+}
+
+.popup-content h2 {
+text-align: center;
+}
+
+.close-button {
+  float: right;
+  font-size: 50px;
+  text-decoration: none;
+  color: #ff4500;
+}
+
+/* Appetizer, dessert, main course animation */
+.appetizer,
+.dessert,
+.main-course {
+  padding: 40px;
+  text-align: center;
+}
+
+/* Footer */
+.footer {
+  background-color: #ffffff;
+  padding: 20px;
+  text-align: center;
+}
+
+.foot {
+  display: inline-block;
+  line-height: 20px;
+  vertical-align: top;
+  margin: 5px;
+}
+.footer p {
+  font-size: 0.9rem;
+  margin: 10px 0;
+  color: #555;
+}
+
+/* Responsive layout */
+@media screen and (max-width: 600px) {
+  .column.middle {
+      width: 100%;
+  }
 }
